--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,11 +13,13 @@
 	},
 	"devDependencies": {
 		"@eslint/compat": "^1.2.3",
+		"@revolist/svelte-datagrid": "^4.11.8",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/adapter-node": "^5.2.11",
 		"@sveltejs/adapter-static": "^3.0.6",
 		"@sveltejs/kit": "^2.9.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
+		"@tailwindcss/typography": "^0.5.15",
 		"autoprefixer": "^10.4.20",
 		"eslint": "^9.7.0",
 		"eslint-config-prettier": "^9.1.0",
